...
                          ),
                        ],
                      ),
                    ),
                  TextField(
                    // Added a key for testing
                    key: const ValueKey('title_field'),
                    controller: _titleController,
                    autofocus: true,
                    cursorColor: Theme.of(context).colorScheme.tertiary,
                    textInputAction: TextInputAction.next,
                    style: const TextStyle(fontSize: 24),
                    decoration: InputDecoration(
...
                      FocusScope.of(context).requestFocus(_contentFocusNode);
                    },
                  ),
                  const SizedBox(height: 10),
                  TextField(
                    // Added a key for testing
                    key: const ValueKey('content_field'),
                    controller: _contentController,
                    focusNode: _contentFocusNode,
                    cursorColor: Theme.of(context).colorScheme.tertiary,
                    textAlignVertical: TextAlignVertical.top,
                    style: const TextStyle(fontSize: 16),
                    maxLines: null,
...
                      const EdgeInsets.symmetric(horizontal: 28, vertical: 14),
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(30),
                  ),
                ),
                child: const Text(
                  'Save',
                  style: TextStyle(
                    fontSize: 18,
                    color: Colors.white,
                    fontWeight: FontWeight.w700,
                  ),
                ),
...
