...
                          fontSize: 30,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
                      const SizedBox(height: 8),
                      const Text(
                        'You’ve finished your Lournal',
                        textAlign: TextAlign.center,
                        style: TextStyle(
                          fontSize: 18,
                        ),
                      ),
                      const SizedBox(height: 20),
...
                      onPressed: () {
                        // Refresh the notes list before popping the page.
                        context.read<NotesProvider>().refreshNotes();
                        Navigator.pop(context);
                      },
                      child: const Text(
                        "Finish",
                        style: TextStyle(
                          fontSize: 24,
                          color: Colors.white,
                          fontWeight: FontWeight.w700,
                        ),
                      ),
...
